# bazel-pico-projects

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  flash.sh
lib/mcp4728/: BUILD.bazel  README.md  mcp4728.cc  mcp4728.h
lib/tc9548a/: BUILD.bazel  tc9548a.cc  tc9548a.h
src/hello_world/: BUILD.bazel  hello-world.cc
src/i2c_scanner/: BUILD.bazel  i2c_scanner.cc
src/i2c_tc9548a/: BUILD.bazel
tools/: BUILD.bazel  flash_pico.py
