###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_python", version = "0.24.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
  configure_coverage_tool = True,
  python_version = "3.10",
  ignore_root_user_error = True,
)

bazel_dep(name = "pw_toolchain", version = "0.1")

bazel_dep(name = "pico-sdk", version = "0.0.1")
