###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_python", version = "0.24.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
  configure_coverage_tool = True,
  python_version = "3.10",
  ignore_root_user_error = True,
)

bazel_dep(name = "pw_toolchain", version = "0.1")

bazel_dep(name = "pico-sdk", version = "0.0.1")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "5bcb0bd8a917b2b48fb5dc55818515f4be3b63ff",
)
